Adding lightgallery features to images

--- a/docs/Code-Promotion/04.Possible-Issues.md
+++ b/docs/Code-Promotion/04.Possible-Issues.md
@@ -20,7 +20,7 @@ If an assembly isn't listed in [`SyncSettings.ExtensionAssemblies`](https://dev.
 
 Because this error occurs during deserialization of the DataFlow contract, there's no direct way to see the DataFlow name or the module that caused the issue, but if running in debug mode in Visual Studio you can look for the `appId` variable to retrieve the id of the dataflow that failed and search on the source Composable instance with `id:12345` to find the offending DataFlow. The inner exception message will provide some hints for what module is causing the issue. In this case, note the reference to "'ModuleInputCollectionOfTableColumnTypeBWskODFT'"; if we go to the DataFlow we find the Xlsx Reader module has a `ColumnTypes` input of type `List<TableColumnType>` (hover over an input to see its type).
 
-![Missing Assembly Input Type](img/Missing_assembly.png)
+<div class="lightgallery"><a data-sub-html="Missing Assembly Input Type" href="../img/Missing_assembly.png"><img alt="Missing Assembly Input Type" src="../img/Missing_assembly.png" style="zoom: 60%;"></a></div>
 
 Thus we need to add `"CompAnalytics.Extension.SpreadSheet"` to [`SyncSettings.ExtensionAssemblies`](https://dev.composable.ai/api/CompAnalytics.IServices.Deploy.SyncSettings.html#CompAnalytics_IServices_Deploy_SyncSettings_ExtensionAssemblies) and an reference to the DLL.
 
@@ -30,7 +30,7 @@ Another common issue that can cause a deployment failure is a DataFlow or QueryV
 
 If a synced DataFlow references another DataFlow that's not a part of the sync, you'll get an `InvalidOperationException` with the ID of the missing DataFlow. You can search on the source Composable instance with `id:12345` to find the referenced DataFlow. If this DataFlow is one that should be synced, either add it to a folder that is being synced or add the folder that it's already in to the sync. Be sure that this is safe to do with regard to folder permissions and/or other resources in the same folder. If the referenced DataFlow should not be synced, you can find which other DataFlows reference it on the right hand side of the DataFlow page by clicking "Referrers":
 
-![Missing Assembly Input Type](img/Referrers.png)
+<div class="lightgallery"><a data-sub-html="Missing Assembly Input Type" href="../img/Referrers.png"><img alt="Missing Assembly Input Type" src="../img/Referrers.png" style="zoom: 60%;"></a></div>
 
 The DataFlow that was failing during sync will be one of these, so you can edit it to remove the incorrect reference.
 
