--- a/docs/Composable-Platform/04.Product-Areas.md
+++ b/docs/Composable-Platform/04.Product-Areas.md
@@ -23,13 +23,13 @@ The main capabilities offered by Composable are organized around product areas f
 
 Composable DataFlows are data processing and analytical workflows, utilizing Composable's flow-based programming method. Each dataflow consists of modules that are connected together to produce higher-level functionality.
 
-![Composable DataFlows](img/02.04.DataFlows.png)
+![!Composable DataFlows](img/02.04.DataFlows.png)
 
 ### [WebApps](../WebApps/01.Overview.md)
 
 Composable WebApps are full web applications, including visualizations built with d3.js, built and seamlessly integrated with Composable using well-defined web services and API endpoints.
 
-![Composable WebApps](img/02.04.WebApps.png)
+![!Composable WebApps](img/02.04.WebApps.png)
 
 ## Data Exploration
 
@@ -37,19 +37,19 @@ Composable WebApps are full web applications, including visualizations built wit
 
 Composable QueryViews provide an interface for distributed queries and live data grids. 
 
-![Composable QueryViews](img/02.04.QueryViews.png)
+![!Composable QueryViews](img/02.04.QueryViews.png)
 
 ### [DashBoards](../DashBoards/01.Overview.md)
 
 Composable DashBoards are customizable web portals where users can publish various blocks of results and runs, for interactive visualizations and reporting.
 
-![Composable DashBoards](img/02.04.DashBoards.png)
+![!Composable DashBoards](img/02.04.DashBoards.png)
 
 ### [DataRepository](../DataRepository/01.Overview.md)
 
 Composable DataRepository allows users to connect to a data repository, visualize relationships, explore the data and save a collection of reusable queries.
 
-![Composable DataExplorer](img/02.04.DataExplorer.png)
+![!Composable DataRepository](img/02.04.DataExplorer.png)
 
 ## Data Modeling & Storage
 
@@ -57,10 +57,10 @@ Composable DataRepository allows users to connect to a data repository, visualiz
 
 Composable DataPortals provides a rapid application development environment for modelling data and automatically generating the web and business layers and custom web user interface.
 
-![Composable DataPortals](img/02.04.DataPortals.png)
+![!Composable DataPortals](img/02.04.DataPortals.png)
 
 ### EntityHub
 
 Composable EntityHub is a machine-learning driven approach to Master Data Management, providing a unique capability to identifying, creating and de-duplicating entities across datasets, going beyond simple deterministic and probabilistic (fuzzy matching) methods.
 
-![Composable EntityHub](img/02.04.EntityHub.png)
+![!Composable EntityHub](img/02.04.EntityHub.png)
