--- a/docs/Composable-Platform/05.System-Administration.md
+++ b/docs/Composable-Platform/05.System-Administration.md
@@ -37,7 +37,7 @@ On a user profile page, users can:
 !!! note
     Users can link their profiles from other third-parties (e.g., Slack, Salesforce, Fitbit, Twitter, ...) and integrate with these services via DataFlows.
 
-![Composable Users](img/02.05.Users.png)
+![!Composable Users](img/02.05.Users.png)
 
 ## [Groups](../Users-and-Groups/01.Overview.md)
 
@@ -53,7 +53,7 @@ Folders in Composable provides a method to logically group Composable resources 
 
 Composable Keys are 'environment variables' that can remain persistent, re-used, and shared, across other Composable resources (e.g., DataFlows), users and groups. Keys are most often used to define and configure connection settings (e.g., to databases) just once, and allow these connections settings to be used across all resources.
 
-![Composable Keys](img/02.05.Keys.png)
+![!Composable Keys](img/02.05.Keys.png)
 
 ## Permissions and Security
 
@@ -86,7 +86,7 @@ After clicking `Share`, a modal will pop up, allowing users to:
 3. Grant/Revoke permissions
 4. Save changes
 
-![Composable Admin Portal - Modules Tab](img/02.05.Share-Modal.png)
+![!Composable Admin Portal - Modules Tab](img/02.05.Share-Modal.png)
 
 !!! note
     Groups are similiarly a securable resource in Composable, and permissions on them can be set. Note the circular dependency between groups and permissions. This allows users to create interesting permission functionality like allowing individuals within a group to see who else is in the group. This functionality can be achieved by giving the group read access to itself.
@@ -107,19 +107,19 @@ The user tab of the Administration portal provides an interface to list and sear
 - Grant / Revoke administrator rights
 - Change / Reset password
 
-![Composable Admin Portal - Users Tab](img/02.05.Admin-Users.png)
+![!Composable Admin Portal - Users Tab](img/02.05.Admin-Users.png)
 
 ### Extension Management
 
 The extensions tab of the Administration portal provides an interface to list and search across all extensions or plugins that is installed on the Composable instance.
 
-![Composable Admin Portal - Extensions Tab](img/02.05.Admin-Extensions.png)
+![!Composable Admin Portal - Extensions Tab](img/02.05.Admin-Extensions.png)
 
 ### Modules Management
 
 The modules tab of the Administration portal provides an interface to list and search across all modules (used within DataFlow applications). Administrators can select a specific module and set its permissions, giving individual users or groups the ability to discover and use the modules. 
 
-![Composable Admin Portal - Modules Tab](img/02.05.Admin-Modules.png)
+![!Composable Admin Portal - Modules Tab](img/02.05.Admin-Modules.png)
 
 !!! note
     Users are not granted permissions to certain modules (e.g., File Mover) by default. If a user requires a module, but cannot find it in the Module Library, it is most likely due to the modules permission settings, that can be configured by the system administrators using this portal.
