--- a/docs/DataFlows/03.KeyBoard-Shortcuts.md
+++ b/docs/DataFlows/03.KeyBoard-Shortcuts.md
@@ -38,4 +38,4 @@ some_url: https://docs.composable.ai
 
 *You can view the keyboard shortcuts from within the Designer by clicking on the question-mark icon outlined in red.*
 
-![Composable DDesigner Keyboard Shortcuts](img/03.03.Img_1.png)
+![!Composable Designer Keyboard Shortcuts](img/03.03.Img_1.png)
