--- a/docs/DataFlows/06.DataFlow-Reuse.md
+++ b/docs/DataFlows/06.DataFlow-Reuse.md
@@ -30,17 +30,17 @@ As an example of code reuse, let us assume that we need to perform an identical 
 
 Here is what this DataFlow will look like.
 
-![Code Reuse](img/03.06.Img_1.png)
+![!Code Reuse](img/03.06.Img_1.png)
 
 What we have are three inputs (the data table, the column name to be aggregated and the aggregate function) and one output (the resulting aggregate value). The inputs and outputs are exposed by use of the External Inputs and External Outputs modules, which will become module connections within the parent DataFlow where this is used. Note that the value in the description box will become helper text for these connections, so be sure to make good use of these!
 
 With the inputs and outputs exposed, our resulting DataFlow can now be encapsulated into a single custom module. 
 
-![Code Reuse](img/03.06.Img_2.png)
+![!Code Reuse New Custom Module](img/03.06.Img_2.png)
 
 Now, a parent DataFlow may use this just like any other module. For example, we can reuse the above DataFlow three times as follows:
 
-![Code Reuse](img/03.06.Img_3.png)
+![!Code Reuse Using New Module](img/03.06.Img_3.png)
 
 Here, we upload a single CSV file, and flow the resulting data table into three instances of our custom module to perform a SUM, AVG and COUNT on a specific column.
 
@@ -50,13 +50,13 @@ While code (DataFlow) reuse is an excellent way to organize and condense complex
 
 As an example, assume that a repetitive data engineering task requires you to replace all occurrences of a given substring (in this case DATE_HOLDER) with a new string (the current date). This can be achieved as follows:
 
-![Code Reuse](img/03.06.Img_4.png)
+![!Code Reuse Example](img/03.06.Img_4.png)
 
 Note that here, we used the Python Code module, but you may use any number of languages (from Python to R to SAS…). The code module allows you to insert your own algorithm (in any number of languages).
 
 The above DataFlow is encapsulated as a single custom module.
 
-![Code Reuse](img/03.06.Img_5.png)
+![!Code Reuse Example New Module](img/03.06.Img_5.png)
 
 And, with Composable being a collaborative platform, you may share this custom module with other users within your enterprise.
 
