--- a/docs/DataFlows/08.Example-DataFlows.md
+++ b/docs/DataFlows/08.Example-DataFlows.md
@@ -25,11 +25,11 @@ Create a new DataFlow by clicking on the DataFlow icon or select DataFlow > Crea
 
 The Composable Designer will load, and you will be presented with a new canvas as shown below.
 
-![Composable Example DataFlow Creation](img/03.08.Img_1.png)
+![!Composable Example DataFlow Creation](img/03.08.Img_1.png)
 
 As explained previously, the Composable Designer is made up of five primary areas: the canvas, the module library, the toolbar, the properties panel, and the output and progress panel.
 
-![Composable Example Blank Canvas](img/03.08.Img_2.png)
+![!Composable Example Blank Canvas](img/03.08.Img_2.png)
 
 ### Step 2 - Retrieve Text
 
@@ -42,7 +42,7 @@ To use this web service, simply find the WebClient Module in the Module Library 
 The WebClient Module has a number of input. For this example, simply "hard-code" in the following URL:
 http://www.randomtext.me/download/txt/gibberish/p-5/25-45
 
-![Composable Example WebClient Module](img/03.08.Img_3.png)
+![!Composable Example WebClient Module](img/03.08.Img_3.png)
 
 Your DataFlow should look like the above. You can even run the DataFlow at this point, and view the results of the Module by right-clicking on the blue output dot.
 
@@ -73,7 +73,7 @@ When this Module executes, it will take the text input from the WebClient Module
 
 At this point, your DataFlow should look like this:
 
-![Composable Example Python Module](img/03.08.Img_4.png)
+![!Composable Example Python Module](img/03.08.Img_4.png)
 
 You can go ahead and run the DataFlow, and inspect the output of the Python Code module. You should see a list of words as the output.
 
@@ -83,7 +83,7 @@ To calculate the word frequency (in the list of words obtained above), we will u
 
 In the Module Library, search for "code", and drag and drop the Code Module onto the canvas.
 
-![Composable Example Code Module](img/03.08.Img_5.png)
+![!Composable Example Code Module](img/03.08.Img_5.png)
 
 The Code Module is an extremely robust module that allows you to execute blocks of Code in a number of .NET languages. Here, we will use C#. Set the Code Module inputs as follows.
 
@@ -147,7 +147,7 @@ namespace Example
 
 The result is a table.
 
-![Composable Example Code Module Output](img/03.08.Img_5b.png)
+![!Composable Example Code Module Output](img/03.08.Img_5b.png)
 
 ### Step 5 - View Results
 
@@ -155,8 +155,8 @@ With that, we are done! We retrieved a block of text, split it into a list of wo
 
 In this final picture, we show how you can connect the Bar Chart Module to generate a visualization.
 
-![Composable Example Full DataFlow](img/03.08.Img_6.png)
+![!Composable Example Full DataFlow](img/03.08.Img_6.png)
 
 You can subsequently take the visualization, convert it to an image and attach it to a email using the Mail Send Module.
 
-![Composable Example Bar Chart Viz](img/03.08.Img_7.png)
+![!Composable Example Bar Chart Viz](img/03.08.Img_7.png)
