--- a/docs/DataPortals/02.Create-DataPortals.md
+++ b/docs/DataPortals/02.Create-DataPortals.md
@@ -17,7 +17,7 @@ Create a new DataPortal by choosing the icon in the side navigation bar.
 
 You will be presented with an overview page. We urge you to read through the description shown, and also download the sample Excel template files that are available (on the right hand side of the screen).
 
-![Composable DataPortals overview](img/05.02.Img_2.png)
+![!Composable DataPortals overview](img/05.02.Img_2.png)
 
 ## DataPortal Configuration
 
@@ -39,7 +39,7 @@ Your Excel file can include sheets of a few different types:
 
 - **CSS**:  An optional sheet for the user to enter custom CSS rules to style the forms page with any colors, margins or other custom style behavior. Sheet name: `CSS`.
 
-  ![Composable DataPortals Excel](img/05.02.Img_3.png)
+  ![!Composable DataPortals Excel](img/05.02.Img_3.png)
 
 ### Container Sheet Basics
 
