--- a/docs/DataPortals/03.MasterSheet.md
+++ b/docs/DataPortals/03.MasterSheet.md
@@ -7,5 +7,5 @@ This is the first sheet that is processed by Composable and acts as a link to al
 - Type will be `Form.<SheetName>` to another sheet in the file. That sheet will be the one that defines what the user sees when first viewing a dataportal. 
   - The connected sheet should probably have some `Table` ControlTypes, as the main inputs for data into tables in your data model.
 
-![Master Sheet](./img/MasterSheet.png)
+![!Master Sheet](./img/MasterSheet.png)
 
