--- a/docs/DataPortals/03.Search-Features.md
+++ b/docs/DataPortals/03.Search-Features.md
@@ -11,7 +11,7 @@ some_url: https://docs.composable.ai
 
 The search box in Composable DataPortals supports many different powerful features for searching tables in Composable DataPortals.
 
-![Composable DataPortals Search](img/05.03.Img_1.png)
+![!Composable DataPortals Search](img/05.03.Img_1.png)
 
 ## Including search boxes for each column field in a table
 
