--- a/docs/DataPortals/05.Categories.md
+++ b/docs/DataPortals/05.Categories.md
@@ -24,7 +24,7 @@ A single category sheet lets the user list out the values for a category as well
 - **Description**
 - **AvailableWith**: Used with the [Option Controller](./06.Setting-Details/OptionController.md). The OptionController column in your container references another field in the container. Then the AvailableWith column in the single category sheet defines which category values are visible based on what OptionController field value is selected. `|` is used as 'or' to allow the value to be available with more than one OptionController input.
 
-![Single Category Sheet](img/SingleCategory.png)
+![!Single Category Sheet](img/SingleCategory.png)
 
 As an example for using the AvailableWith column, in the above image, value `Z` will always be visible as a selection value. `X` and `Y` will only be shown if `A` is the value in the OptionController field.
 
@@ -32,7 +32,7 @@ As an example for using the AvailableWith column, in the above image, value `Z` 
 
 Instead of a separate sheet for each category, multiple categories can be descibed in a sheet named `Categories`. In this sheet, each column represents its own category to simplify the Excel structure if you have a lot of categories in your data model. The `Id` defined in a single category sheet is assigned automatically. The header is the category name, and the body rows are the category selections. When referencing this category from another sheet, define the Type as `Form.<CategoryName>`.
 
-![Categories Sheet](./img/CategoriesSheet.png)
+![!Categories Sheet](./img/CategoriesSheet.png)
 
 ## Visibility Controls
 
