--- a/docs/Keys/02.Using-Keys.md
+++ b/docs/Keys/02.Using-Keys.md
@@ -19,11 +19,11 @@ Doing so, will open up your Key Vault, where you can browse all of your Keys (Ke
 
 To create a new Key, simply click the New Key icon in the top right:
 
-![Composable New Key](img/09.02.Img_2.png)
+![!Composable New Key](img/09.02.Img_2.png)
 
 At this point, you will be given an option to select the type of Key you want to create:
 
-![Composable Key Types](img/09.02.Img_3.png)
+![!Composable Key Types](img/09.02.Img_3.png)
 
 As you can see, Composable provides the option to store all types of complex access credentials inside the Key Vault, including:
 
@@ -44,7 +44,7 @@ This is especially useful when developing multiple DataFlows that may require th
 
 Once you select the Key type, a form appears to enter the relevant information based on the type selected (e.g., username, password, host, port, etc.). The name you enter in the Name field will be used to identify and retrieve the Key across the other Composable resources (e.g., DataFlows and QueryViews). Please be sure to use easy to remember and unique names.
 
-![Composable Key Name](img/09.02.Img_4.png)
+![!Composable Key Name](img/09.02.Img_4.png)
 
 !!! note
     Use easy to remember and unique names for your Keys, as this will be how your Keys are identified and retrieved across other Composable Resources.
@@ -57,7 +57,7 @@ Composable Keys allow you to save all types of complex access credentials in a s
 
 To share a Key, open the Key and click on share in the top right:
 
-![Composable Key Share](img/09.02.Img_5.png)
+![!Composable Key Share](img/09.02.Img_5.png)
 
 Similar to the other access control pages for other Composable resources, you can now select individual Users, Groups, or Everyone and Anyone with an Account, and provide access to the Key at a granular level:
 
@@ -67,4 +67,4 @@ Similar to the other access control pages for other Composable resources, you ca
 - Read
 - Write
 
-![Composable Key Access Control](img/09.02.Img_6.png)
+![!Composable Key Access Control](img/09.02.Img_6.png)
