--- a/docs/QueryViews/02.Create-QueryView.md
+++ b/docs/QueryViews/02.Create-QueryView.md
@@ -25,7 +25,7 @@ Note the three sections: a set of configuration menu items on the left, the quer
 
 Pages to configure a QueryView are in the menu on the left of Edit mode.
 
-![Composable QueryView Menu](img/04.02.Img_2.png)
+<div class="lightgallery"><a data-sub-html="Composable QueryView Menu" href="../img/04.02.Img_2.png"><img alt="Composable QueryView Menu" src="../img/04.02.Img_2.png" style="zoom: 60%;"></a></div>
 
 - **Info**: On this modal, enter in the QueryView name, description, and other global settings.
     - **Name**: The name of the QueryView. Must be Named before Saving
@@ -39,11 +39,11 @@ Pages to configure a QueryView are in the menu on the left of Edit mode.
     - **Auto-Refresh on Input Change**: If selected, the results will refresh as literal or filter [Inputs](./Inputs.md) are changed. If unselected, clicking the refresh button will refresh the results
     - **Display `NULL` Values as Blank**: If unselected, `NULL` fields will display as `NULL`. If selected, the fields will be blank.
 
-![Composable New QueryView](img/04.02.Img_3.png)
+![!Composable New QueryView](img/04.02.Img_3.png)
 
 - **Connection**: Here, select the [Composable Key](../Keys/01.Overview.md) to connect to the data store of your choice.
 
-![Composable New QueryView](img/04.02.Img_4.png)
+![!Composable New QueryView](img/04.02.Img_4.png)
 
 - [**Inputs**](./Inputs.md): Configure literal and filter parameters whose values can be set in View Mode of the query.
 - [**Children**](./ChildrenQueries.md): Allow you to expand each row of this queryview to bring up additional details. When expanded, a row will execute and display the child QueryViews selected below. These can accept values from the expanded row as inputs, allowing you to dive deep into additional information related to the expanded row.
@@ -56,7 +56,7 @@ In the Query Template Window of Edit mode, you can write your SQL statement.
 
 As an example, you can do the following:
 
-![Composable QueryView template](img/04.02.Img_5.png)
+![!Composable QueryView template](img/04.02.Img_5.png)
 
 Note that as you write your SQL statement, Composable checks and converts your query into a syntactically correct SQL statement viewable in the **Sample Output** window on the right. This fills in example values for [input parameters](./Inputs.md) so you can ensure that your SQL query is correct. The checkbox icon will turn green when clicked if your syntax is valid.
 
@@ -69,7 +69,7 @@ Note that as you write your SQL statement, Composable checks and converts your q
 
 You can now switch to the View mode by clicking on the Execute button. A grid of results will appear.
 
-![Composable QueryView View mode](img/04.02.Img_7.png)
+![!Composable QueryView View mode](img/04.02.Img_7.png)
 
 You can switch back and forth between Edit and View to iterate on the query. Click on the Save button to save the QueryView.
 
