--- a/docs/Users-and-Groups/01.Overview.md
+++ b/docs/Users-and-Groups/01.Overview.md
@@ -17,7 +17,7 @@ Users and Groups are two core entities within the platform that are considered s
 
 Users create accounts in a similar fashion to any other website. The typical [registration workflow](../Composable-Platform/02.Navigation.md) steps include:
 
-![Composable Registration](../Composable-Platform/img/02.02.Composable2.0_Reg.png)
+![!Composable Registration](../Composable-Platform/img/02.02.Composable2.0_Reg.png)
 
 - User creates an account through a web form
 - Email is sent to user ensuring a valid email exists
