--- a/docs/Composable-Platform/02.Navigation.md
+++ b/docs/Composable-Platform/02.Navigation.md
@@ -15,11 +15,11 @@ This page provides examples of the login page and how to navigate through resour
 
 Using any modern web browser, point to your organization's Composable instance (e.g., [Demo Instance](https://cloud.composableanalytics.com) ). If you already have an account, simply enter your credentials on the login screen.
 
-![Composable Registration](img/02.02.Composable2.0_Login.png)
+![!Composable Registration](img/02.02.Composable2.0_Login.png)
 
 The login tab also has links that can help you reset your password if forgotten. If you need to register, simply click on the Register tab, as shown below, and enter your information.
 
-![Composable Registration](img/02.02.Composable2.0_Reg.png)
+![!Composable Registration](img/02.02.Composable2.0_Reg.png)
 
 !!! note
     Once registered, a system admin will need to approve your account, and you will receive an e-mail notification once approved.
@@ -28,7 +28,7 @@ The login tab also has links that can help you reset your password if forgotten.
 
 If Windows Authentication is enabled on your Composable instance, users will see their windows login information already populated, providing a seamless Single-Sign-On (SSO) experience.
 
-![Composable Registration with Windows Auth](img/02.02.Composable2.0_WinAuthReg.png)
+<div class="lightgallery"><a data-sub-html="Composable Registration with Windows Auth" href="../img/02.02.Composable2.0_WinAuthReg.png"><img alt="Composable Registration with Windows Auth" src="../img/02.02.Composable2.0_WinAuthReg.png" style="zoom: 45%;"></a></div>
 
 As you can see on the above screenshot, the username shown is in the form domain\username and is pre-populated and read-only. To log bypassing Windows Authentication, and using username/password credentials, simply click on Forms Login.
 
@@ -50,10 +50,11 @@ The sidebar has quick links to all of Composable’s product areas so you can ju
 
 The sidebar also includes a global search widget. This is the fastest way to find anything inside Composable. Type a quick word or use our powerful search grammar to pinpoint exactly what you are looking for.
 
-![Composable NavBars](img/02.02.Composable2.0_NavBar.png)
+<div class="lightgallery"><a data-sub-html="Composable NavBars" href="../img/02.02.Composable2.0_NavBar.png"><img alt="!Composable NavBars" src="../img/02.02.Composable2.0_NavBar.png" style="zoom: 35%;"></a></div>
 
 ### TopBar
 
 While the sidebar provides full navigation across all of Composable's product areas, the topbar across each page in Composable, provides a less-cluttered view of the current resource and key links. The topbar will display the name of the current resource, links to your user profile, version information, alerts, etc. as well as visual cues (e.g., an execution progress bar for DataFlows).
 
-![Composable NavBars](img/02.02.Composable2.0_TopBar.png)
+![!Composable NavBars](img/02.02.Composable2.0_TopBar.png)
+
