--- a/docs/DataFlows/02.Composable-Designer.md
+++ b/docs/DataFlows/02.Composable-Designer.md
@@ -16,7 +16,7 @@ To create a new DataFlow, click on DataFlow or select DataFlow > Create New from
 The Composable Designer user interface is made up of five primary areas: the [canvas](#designer-canvas), the [module library](#module-library), the [toolbar](#designer-toolbar), the [properties panel](#properties-panel), and the [output and progress panel](#output-and-progress-panel).
 
 
-![Composable DataFlow Application](img/03.02.Img_1.png)
+![!Composable DataFlow Application](img/03.02.Img_1.png)
 
 
 ## Designer Canvas
