--- a/docs/DataFlows/05.DataFlows.md
+++ b/docs/DataFlows/05.DataFlows.md
@@ -19,7 +19,7 @@ At its core, a DataFlow is a directed graph, where the nodes are the modules, an
 
 For developers, DataFlows can represent microservices, and can be used in a microservice-based approach to building large software applications. DataFlows are independently deployable services that are part of a broader Microservice Architecture.
 
-![Composable DataFlow Application](img/03.01.Img_1.png)
+![!Composable DataFlow Application](img/03.01.Img_1.png)
 
 DataFlow Applications in Composable consist of functional blocks, [Modules](./04.Modules.md), strung together with connections to create new functionality. A DataFlow Applications model is an acyclic directed graph, where the nodes are the modules, and the edges are the connections between module inputs and outputs.
 
