--- a/docs/Getting-Started/04.Public-Cloud-Deployment.md
+++ b/docs/Getting-Started/04.Public-Cloud-Deployment.md
@@ -14,21 +14,21 @@ Composable is available in the AWS Marketplace at [AWS](https://aws.amazon.com/m
 1. Navigate to [AWS](https://aws.amazon.com/marketplace/seller-profile?id=911f5969-ae5e-4de9-acca-b8f606972771) and select **Composable DataOps Platform** from the product list.
     - If not already, please make sure to be logged into your AWS account.
     
-    ![AWS Composable Installation Wizard](img/01.04.AWS_Install_01.png)
+    ![!AWS Composable Installation Wizard](img/01.04.AWS_Install_01.png)
     
 2. Click on Subscribe. 
     - You can review product information, including full pricing estimates.
 
-    ![AWS Composable Installation Wizard](img/01.04.AWS_Install_02.png)
+    ![!AWS Composable Installation Wizard](img/01.04.AWS_Install_02.png)
 
 3. Review and Accept the Terms and Conditions, then click on Continue to Configuration.
 
-    ![AWS Composable Installation Wizard](img/01.04.AWS_Install_03.png)
+    ![!AWS Composable Installation Wizard](img/01.04.AWS_Install_03.png)
 
 4. Select configuration and AWS region, then click Contiue to Launch.
     - Composable is available as a 64bit AMI running on Windows Server 2016. You can select an AWS region on this screen.
 
-    ![AWS Composable Installation Wizard](img/01.04.AWS_Install_04.png)
+    ![!AWS Composable Installation Wizard](img/01.04.AWS_Install_04.png)
 
 5. Select, finalize and review configuration, then click Launch.
     - Review the usage instructions, copied below for reference.    
@@ -37,7 +37,7 @@ Composable is available in the AWS Marketplace at [AWS](https://aws.amazon.com/m
     - VPC Settings, Subnet settings, Security Group Settings and Key Pair settings - please select from exisiting options already configured in your AWS account, or create new ones as needed.
     - Finally, click Launch!
 
-    ![AWS Composable Installation Wizard](img/01.04.AWS_Install_05.png)
+    ![!AWS Composable Installation Wizard](img/01.04.AWS_Install_05.png)
 
     !!! Usage-Instructions
         Composable DataOps Platform can be accessed via any browser (Chrome, Firefox, IE, Edge, ...). Once the instance is running, you can point your web browser to http://<public hostname>/CompAnalytics/, where <public hostname> is the public IP address for your instance (e.g., ec2-12-345-678-90.us-west-2.compute.amazonaws.com) listed in the EC2 Dashboard within the AWS Console. You may also connect to this instance directly using Remote Desktop Connection, and navigate to localhost/CompAnalytics. The password for username "admin" will be dynamically set to the EC2 instance ID. (e.g., username "admin" and password "i-03cfe92f81f787655"). Instance ID can be retrieved from the AWS Console once your VM is launched. You may modify rules in the security group to control the inbound and outbound traffic to this instance.
@@ -49,31 +49,30 @@ Composable is available in the Azure Marketplace at [Azure](https://azuremarketp
 1. Navigate to [Azure](https://azuremarketplace.microsoft.com/en-us/marketplace/apps/composable.composable) and review product information, including full pricing estimates.
     - If not already, please make sure to be logged into your Azure account, and click Get it Now.
     
-    ![Azure Composable Installation Wizard](img/01.04.Azure_Install_01.png)
+    ![!Azure Composable Installation Wizard](img/01.04.Azure_Install_01.png)
     
-
 2. From the Azure Portal, once logged in, you can also select add New Resource, and search for 'composable'. 
     - You can review product information, including full pricing estimates.
 
-    ![Azure Composable Installation Wizard](img/01.04.Azure_Install_02.png)
+    ![!Azure Composable Installation Wizard](img/01.04.Azure_Install_02.png)
 
 
 3. Once you select Composable, you can review the product information and click Create.
 
-    ![Azure Composable Installation Wizard](img/01.04.Azure_Install_03.png)
+    ![!Azure Composable Installation Wizard](img/01.04.Azure_Install_03.png)
 
 
 4. Azure will present a 5-step wizard to select settings, VM size review pricing and terms.
     - The following screenshots represent the steps in the deployment wizard.
 
-    ![Azure Composable Installation Wizard](img/01.04.Azure_Install_04.png)
+    ![!Azure Composable Installation Wizard](img/01.04.Azure_Install_04.png)
 
-    ![Azure Composable Installation Wizard](img/01.04.Azure_Install_05.png)
+    ![!Azure Composable Installation Wizard](img/01.04.Azure_Install_05.png)
 
-    ![Azure Composable Installation Wizard](img/01.04.Azure_Install_06.png)
+    ![!Azure Composable Installation Wizard](img/01.04.Azure_Install_06.png)
 
-    ![Azure Composable Installation Wizard](img/01.04.Azure_Install_07.png)
+    ![!Azure Composable Installation Wizard](img/01.04.Azure_Install_07.png)
 
-    ![Azure Composable Installation Wizard](img/01.04.Azure_Install_08.png)
+    ![!Azure Composable Installation Wizard](img/01.04.Azure_Install_08.png)
 
 5. Finalize and review configuration, then click Purchase.
