--- a/docs/QueryViews/02.Create-QueryView.md
+++ b/docs/QueryViews/02.Create-QueryView.md
@@ -28,15 +28,15 @@ Pages to configure a QueryView are in the menu on the left of Edit mode.
 <div class="lightgallery"><a data-sub-html="Composable QueryView Menu" href="../img/04.02.Img_2.png"><img alt="Composable QueryView Menu" src="../img/04.02.Img_2.png" style="zoom: 60%;"></a></div>
 
 - **Info**: On this modal, enter in the QueryView name, description, and other global settings.
-    - **Name**: The name of the QueryView. Must be Named before Saving
+    - **Name**: The name of the QueryView. Must be Named before Saving.
     - **ID**: The Composable ID that can be used to refer to the QueryView is other applications.
     - **Description**: A description field to provide more information or context on the QueryView.
-    - **Folder**: Used for organizing and sharing resources
-    - **Tags**: Add tags to help searching for resources
-    - [**Paging Type**](./Paging.md): Set how the results will display. Options are **None** which displays the entire result, **Limit** the number of rows (displayed on one page). **Auto** and **Full** provide paging functionality. Auto takes care of the paging, whereas for Full the user sets the paging paramters in the query. 
+    - **Folder**: Used for organizing and sharing resources.
+    - **Tags**: Add tags to help searching for resources.
+    - [**Paging Type**](./Paging.md): Set how the results will display. Options are **None** which displays the entire result, **Limit** the number of rows (displayed on one page). **Auto** and **Full** provide paging functionality. **Auto** takes care of the paging, whereas for **Full** the user sets the paging paramters in the query. 
     - **Default Order Column**: Column order that goes after an `ORDER BY` clause for result ordering. Can either be column numbers, or column names.
-    - **Auto-Execute on Page Load**: If unselected, the `Refresh` will need to be clicked to load results
-    - **Auto-Refresh on Input Change**: If selected, the results will refresh as literal or filter [Inputs](./Inputs.md) are changed. If unselected, clicking the refresh button will refresh the results
+    - **Auto-Execute on Page Load**: If unselected, the `Refresh` will need to be clicked to load results.
+    - **Auto-Refresh on Input Change**: If selected, the results will refresh as literal or filter [Inputs](./Inputs.md) are changed. If unselected, clicking the refresh button will refresh the results.
     - **Display `NULL` Values as Blank**: If unselected, `NULL` fields will display as `NULL`. If selected, the fields will be blank.
 
 ![!Composable New QueryView](img/04.02.Img_3.png)
@@ -46,9 +46,9 @@ Pages to configure a QueryView are in the menu on the left of Edit mode.
 ![!Composable New QueryView](img/04.02.Img_4.png)
 
 - [**Inputs**](./Inputs.md): Configure literal and filter parameters whose values can be set in View Mode of the query.
-- [**Children**](./ChildrenQueries.md): Allow you to expand each row of this queryview to bring up additional details. When expanded, a row will execute and display the child QueryViews selected below. These can accept values from the expanded row as inputs, allowing you to dive deep into additional information related to the expanded row.
+- [**Children**](./ChildrenQueries.md): Allows you to expand each row of this queryview to bring up additional details. When expanded, a row will execute and display the child QueryViews selected below. These can accept values from the expanded row as inputs, allowing you to dive deep into additional information related to the expanded row.
 - [**Actions**](./Actions.md): Linking a DataFlow as an action will include a button(s) adjacent to this QueryView's result table that allows you to execute a DataFlow with the `QueryView Input` module using data from the QueryView as input data. This can be used to create powerful interactivity between the data your QueryView displays and related DataFlows you've authored.
-- [**HyperLinks**](./Hyperlinks.md): Configure a hyperlink for each row that can reference data values in the row
+- [**HyperLinks**](./Hyperlinks.md): Configure a hyperlink for each row that can reference data values in the row.
 
 ## Writing the Query
 
