--- a/docs/QueryViews/01.Overview.md
+++ b/docs/QueryViews/01.Overview.md
@@ -15,4 +15,4 @@ QueryViews are great at creating live datagrids of data, and provide an interfac
 
 To get started, click on the datagrid icon in the sidebar.
 
-![!Composable QueryView Sidebar](img/04.01.Img_1.png)
+![Composable QueryView Sidebar](img/04.01.Img_1.png)
