--- a/docs/DataRepository/01.Overview.md
+++ b/docs/DataRepository/01.Overview.md
@@ -9,4 +9,8 @@ some_url: https://docs.composable.ai
 
 # Overview
 
-Composable DataRepository allows users to connect to a data repository, visualize relationships, explore the data and save a collection of reusable queries.
+Composable DataRepositories allow users to connect to a data source, visualize relationships, explore the data, and save a collection of reusable queries.
+
+## Introduction to DataRepositories
+
+No matter how powerful the data you collect, the value of that data can be unlocked only when people understand what data is available, how it relates to other data, and how that data is being used. DataRepositories, together with [DataCatalogs](../DataCatalogs/01.Overview.md), bring together all the most important information about a data source in an intuitive, shareable form, allowing for collaborative creation of a reference guide for all your data. They also provide a powerful tool for data exploration, allowing you to view data from many tables at once without writing any code or unnecessarily hiding source data through flattening of results.
