DataCatalog link fix

--- a/docs/DataRepository/01.Overview.md
+++ b/docs/DataRepository/01.Overview.md
@@ -13,4 +13,4 @@ Composable DataRepositories allow users to connect to a data source, visualize r
 
 ## Introduction to DataRepositories
 
-No matter how powerful the data you collect, the value of that data can be unlocked only when people understand what data is available, how it relates to other data, and how that data is being used. DataRepositories, together with [DataCatalogs](../DataCatalogs/01.Overview.md), bring together all the most important information about a data source in an intuitive, shareable form, allowing for collaborative creation of a reference guide for all your data. They also provide a powerful tool for data exploration, allowing you to view data from many tables at once without writing any code or unnecessarily hiding source data through flattening of results.
+No matter how powerful the data you collect, the value of that data can be unlocked only when people understand what data is available, how it relates to other data, and how that data is being used. DataRepositories, together with [DataCatalogs](../DataCatalogs/Overview.md), bring together all the most important information about a data source in an intuitive, shareable form, allowing for collaborative creation of a reference guide for all your data. They also provide a powerful tool for data exploration, allowing you to view data from many tables at once without writing any code or unnecessarily hiding source data through flattening of results.
