--- a/docs/Getting-Started/03.Installation-and-Deployment.md
+++ b/docs/Getting-Started/03.Installation-and-Deployment.md
@@ -52,63 +52,72 @@ The Composable installation wizard will provide the following steps:
 1. Check system and software requirements.
     - The installer will check system requirements, space availability and automatically download and install any required software, such as a back-end database store. Specifically, SQL Server Express will be downloaded and installed as a back-end database if required. Composable will leverage the full-text indexer if you install SQL Server with advanced services.
 
-    <img src="img/01.03.ComposableInstaller_1.png" alt="Composable Installation Wizard" style="zoom: 50%;" />
+    ![!Composable Installation Wizard](img/01.03.ComposableInstaller_1.png)
 
 2. With all system and software requirements met, the next steps in the Composable installation will be presented.
 
-    <img src="img/01.03.ComposableInstaller_2.png" alt="Composable Installation Wizard" style="zoom:50%;" />
+    ![!Composable Installation Wizard](img/01.03.ComposableInstaller_2.png)
 
 3. **End-User License Agreement**
     - You will be asked to accept the terms in the License Agreement. 
 
-    <div class="lightgallery"><a data-sub-html="Composable Installation Wizard" href="../img/01.03.ComposableInstaller_3.png"><img alt="Composable Installation Wizard" src="../img/01.03.ComposableInstaller_3.png" style="zoom: 60%;"></a></div>
+    ![!Composable Installation Wizard](img/01.03.ComposableInstaller_3.png)
 
 4. **Setup Type**
 
     - Installation options will be presented. For a single machine install, choose Complete. If you want to only install certain components, choose Custom.
 
-    <div class="lightgallery"><a data-sub-html="Composable Installation Wizard" href="../img/01.03.ComposableInstaller_4a.png"><img alt="Composable Installation Wizard" src="../img/01.03.ComposableInstaller_4a.png" style="zoom: 60%;"></a></div>
+    ![!Composable Installation Wizard](img/01.03.ComposableInstaller_4a.png)
 
     - The components include databases, NT services, and a web application.
 
-    <div class="lightgallery"><a data-sub-html="Composable Installation Wizard" href="../img/01.03.ComposableInstaller_4b.png"><img alt="Composable Installation Wizard" src="../img/01.03.ComposableInstaller_4b.png" style="zoom: 60%;"></a></div>
+    ![!Composable Installation Wizard](img/01.03.ComposableInstaller_4b.png)
 
 5. **Membership Store Settings**
     - If using SQL Express, the local server and instance would be .\SQLEXPRESS. For the default host, it’s just “.”
 
-    <div class="lightgallery"><a data-sub-html="Composable Installation Wizard" href="../img/01.03.ComposableInstaller_5.png"><img alt="Composable Installation Wizard" src="../img/01.03.ComposableInstaller_5.png" style="zoom: 60%;"></a></div>
+    ![!Composable Installation Wizard](img/01.03.ComposableInstaller_5.png)
+
 
 6. **Admin Account Settings**
     - Enter a system administrator e-mail address, username and password. This will be the initial administrator of the system. Please keep a record of these credentials.
 
-    <div class="lightgallery"><a data-sub-html="Composable Installation Wizard" href="../img/01.03.ComposableInstaller_6.png"><img alt="Composable Installation Wizard" src="../img/01.03.ComposableInstaller_6.png" style="zoom: 60%;"></a></div>
+    ![!Composable Installation Wizard](img/01.03.ComposableInstaller_6.png)
+
 
 7. **Database Settings**
     - If using SQL Express, the local server and instance would be .\SQLEXPRESS. For the default host, it’s just “.”
 
-    <div class="lightgallery"><a data-sub-html="Composable Installation Wizard" href="../img/01.03.ComposableInstaller_7.png"><img alt="Composable Installation Wizard" src="../img/01.03.ComposableInstaller_7.png" style="zoom: 60%;"></a></div>
+    ![!Composable Installation Wizard](img/01.03.ComposableInstaller_7.png)
+
 
 8. **Server Settings**
     - Set the base path of the IIS web site. For a single / local machine http://localhost is fine. If on a corporate network, and you have a http proxy, set it here. An SMTP Server is also required to manage account registrations (e.g., e-mail registration confirmations and notifications).
 
-    <div class="lightgallery"><a data-sub-html="Composable Installation Wizard" href="../img/01.03.ComposableInstaller_8.png"><img alt="Composable Installation Wizard" src="../img/01.03.ComposableInstaller_8.png" style="zoom: 60%;"></a></div>
+    ![!Composable Installation Wizard](img/01.03.ComposableInstaller_8.png)
+
 
 9. **Additional Server Settings**
     - You can set the Composable Runs directory folder on this screen.
 
-    <div class="lightgallery"><a data-sub-html="Composable Installation Wizard" href="../img/01.03.ComposableInstaller_9.png"><img alt="Composable Installation Wizard" src="../img/01.03.ComposableInstaller_9.png" style="zoom: 60%;"></a></div>
+    ![!Composable Installation Wizard](img/01.03.ComposableInstaller_9.png)
+
 
 10. **Web Application Settings**
     - Anonymous Access: You can optionally choose to allow anonymous access. Anonymous users will be able to see any Composable resources shared with ‘Everyone’.
     - Windows Authentication: You can optionally choose to sync the Composable instance with Exchange / Active Directory to enable Single-Sign-On (SSO) in an enterprise settings.
 
-    <div class="lightgallery"><a data-sub-html="Composable Installation Wizard" href="../img/01.03.ComposableInstaller_10.png"><img alt="Composable Installation Wizard" src="../img/01.03.ComposableInstaller_10.png" style="zoom: 60%;"></a></div>
+    ![!Composable Installation Wizard](img/01.03.ComposableInstaller_10.png)
+
 
 11. **License File**
       - You will be prompted to cut/paste a license key here. Please contact info@composable.ai for a commercial license. If you do not currently have a license, you can continue with the installation, and activate your instance at a later time.
 
-     <div class="lightgallery"><a data-sub-html="Composable Installation Wizard" href="../img/01.03.ComposableInstaller_11.png"><img alt="Composable Installation Wizard" src="../img/01.03.ComposableInstaller_11.png" style="zoom: 60%;"></a></div>
+    ![!Composable Installation Wizard](img/01.03.ComposableInstaller_11.png)
 
-After these options are set, you can begin the installation. The wizard will copy all the files to your local disk, configure all databases for you, and will turn on IIS and necessary components to run the web application.
 
-<div class="lightgallery"><a data-sub-html="Composable Installation Wizard" href="../img/01.03.ComposableInstaller_12.png"><img alt="Composable Installation Wizard" src="../img/01.03.ComposableInstaller_12.png" style="zoom: 60%;"></a></div>
+12. **Ready to Install**
+      - After these options are set, you can begin the installation. The wizard will copy all the files to your local disk, configure all databases for you, and will turn on IIS and necessary components to run the web application.
+
+    ![!Composable Installation Wizard](img/01.03.ComposableInstaller_12.png)
+
