user profile page

--- a/docs/Composable-Platform/02.Navigation.md
+++ b/docs/Composable-Platform/02.Navigation.md
@@ -30,7 +30,7 @@ If Windows Authentication is enabled on your Composable instance, users will see
 
 <div class="lightgallery"><a data-sub-html="Composable Registration with Windows Auth" href="../img/02.02.Composable2.0_WinAuthReg.png"><img alt="Composable Registration with Windows Auth" src="../img/02.02.Composable2.0_WinAuthReg.png" style="zoom: 45%;"></a></div>
 
-As you can see on the above screenshot, the username shown is in the form domain\username and is pre-populated and read-only. To log bypassing Windows Authentication, and using username/password credentials, simply click on Forms Login.
+As you can see on the above screenshot, the username shown is in the form domain\username and is pre-populated and read-only. To log in by bypassing Windows Authentication, and using username/password credentials, simply click on the Forms Login link.
 
 ### Azure Active Directory
 
